# barsystem

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
data/: example.csv
src/barsystem/: __init__.py  app.py  menu.py
src/barsystem/pages/: __init__.py  admin.py  user.py
