[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barsystem"
dynamic = ["dependencies", "optional-dependencies", "version"]
requires-python = ">=3.9"
authors = [
    {name = "Siem de Jong", email = "siem.dejong@hotmail.nl"},
]
maintainers = [
    {name = "Siem de Jong", email = "siem.dejong@hotmail.nl"}
]
description = "Bar system without bells and whistles for at your assocation."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["barsystem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
# Homepage = "https://github.com/siemdejong/barsystem"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/siemdejong/barsystem"
"Bug Tracker" = "https://github.com/siemdejong/barsystem/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "barsystem.__version__"}
dependencies = {file = "requirements.txt"}
optional-dependencies = {dev = {file = "requirements-dev.txt"}}

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = ["D203", "D213", "COM812", "ISC001"]
